# go_vs_python_scraping

go/: cpu.pprof  go.mod  go.sum  main.go  mem.pprof
python/: main.py
rust/nba_all_stars_scraper/: Cargo.toml
rust/nba_all_stars_scraper/src/: main.rs
