[package]
name = "nba_all_stars_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = {version = "0.11.20", features = ["blocking"]}
scraper = "0.17.1"
tokio = {version = "1.32.0", features = ["full"]}
